2005-05-17 Vladimir Hirsl
	Fixed problem marker updating for files that are not indexed due to
	empty scanner info. Some refactoring of problem marker generation code.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AbstractIndexer.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRequestor.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRunner.java

2005-05-13 Vladimir Hirsl
	Files with empty scanner info are not indexed anymore.
	Info problem marker is created for each such file.
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* src/org/eclipse/cdt/internal/core/CCorePluginResources.properties
	
	Fix for resolving header file name for #include "..." preprocessor statements.
	(Should use both local and system include paths)
	* parser/org/eclipse/cdt/internal/core/parser/scanner2/BaseScanner.java

2005-05-12 Alain Magloire
	For the per file container, make sure we clean the project info.
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* model/org/eclipse/cdt/core/model/IPathEntryContaienrExtension.java

2005-05-10 Vladimir Hirsl
	Fix for PR 94500: [Path Entry] Problem marker: Invalid project path: DISCOVERED_SCANNER_INFO
	
	* model/org/eclipse/cdt/internal/core/model/PathEntryUtil.java
	
	Fix for infinite loop in LocationMap.createSoleLocation(..). Courtesy of John C.
	
	* parser/org/eclipse/cdt/internal/core/parser/scanner2/LoactionMap.java

2005-05-02 Vladimir Hirsl
	Fix for PR 92599: [Indexer] Remove annotation markers preference from DOMIndexer & friends